# antediluvian

./: .gitignore  ARCHITECT_TODO.md  CNAME  Cargo.toml  DEVELOPMENT.md  PROJECT.md  README.md  index.html
archive_typescript_2026-07-09/: Cargo.lock.bevy-prototype  Cargo.toml.bevy-prototype  WHY_ARCHIVED.md  index.html  package-lock.json  package.json
archive_typescript_2026-07-09/src_typescript_phaser_archive/: App.tsx  camera.rs  enemies.rs  main.rs  player.rs
assets/data/: caves.json  mobs.json  pois.json  prices.json  pvp_zones.json
crates/client-bevy/: Cargo.toml
crates/client-bevy/src/: atmosphere.rs  audio.rs  combat.rs  equipment.rs  grass.rs  local.rs  main.rs  net.rs  perf.rs  terrain.rs  ui.rs  variety.rs  vfx.rs  wildlife.rs  world.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: caves.rs  db.rs  economy.rs  main.rs  mobs.rs  net.rs  pois.rs  quests.rs  world.rs
crates/sim/: Cargo.toml
crates/sim/src/: lib.rs  mobs.rs  pois.rs  world.rs
crates/test-client/: Cargo.toml
crates/test-client/src/: main.rs  swarm.rs
deploy/: README.md  antediluvia.service  deploy.sh
docs/alpha2/: A4_AUDIT.md  A4_FINAL_VERDICT.md  A4_PASS1_RESULTS.md  A4_PASS2_RESULTS.md  README.md
docs/art/: CHUNK_01_characters.md  CHUNK_02_combat_events.md  CHUNK_03_terrain.md  CHUNK_04_environment.md  CHUNK_05_wildlife.md  CHUNK_06_vfx.md  CHUNK_07_ui.md  CHUNK_08_atmosphere.md  CHUNK_09_equipment.md  CHUNK_10_performance.md  LICENSES.md  README.md
docs/content/: CHUNK_C01_quest_engine.md  CHUNK_C02_act_quests.md  CHUNK_C03_bestiary.md  CHUNK_C04_pois.md  CHUNK_C05_world_scale.md  CHUNK_C06_mounts.md  CHUNK_C07_taming.md  CHUNK_C08_theme_questlines.md  CHUNK_C09_caves.md  CHUNK_C10_factions.md  CHUNK_C11_economy.md  CHUNK_C12_audio.md  CHUNK_C13_character_builder.md  CHUNK_C14_dev_menu.md  CHUNK_C15_thousand_players.md  CHUNK_C16_wow_parity_pvp_zones.md  README.md
docs/locations/: 01_eden_and_nod.md  02_the_sprawl_of_enoch.md  03_the_hermon_range.md  04_the_nephilim_wastes.md  05_the_abyssal_basins.md  README.md
docs/locations/caves/: Cave_Archive_01.md  Cave_Archive_02.md  Cave_Archive_03.md  Cave_Archive_04.md  Cave_Archive_05.md  Cave_Archive_06.md  Cave_Archive_07.md  Cave_Archive_08.md  Cave_Archive_09.md  Cave_Archive_10.md
docs/locations/points_of_interest/: POI_Archive_01.md  POI_Archive_02.md  POI_Archive_03.md  POI_Archive_04.md  POI_Archive_05.md  POI_Archive_06.md  POI_Archive_07.md  POI_Archive_08.md  POI_Archive_09.md  POI_Archive_10.md  POI_Archive_11.md  POI_Archive_12.md  POI_Archive_13.md  POI_Archive_14.md  POI_Archive_15.md  POI_Archive_16.md  POI_Archive_17.md  POI_Archive_18.md  POI_Archive_19.md  POI_Archive_20.md
docs/lore/: antediluvian_lore_overview.md
docs/lore/entities/: factions.md
docs/lore/geography/: locations.md
docs/mobs/: Bestiary_Vol_01.md  Bestiary_Vol_02.md  Bestiary_Vol_03.md  Bestiary_Vol_04.md  Bestiary_Vol_05.md  Bestiary_Vol_06.md  Bestiary_Vol_07.md  Bestiary_Vol_08.md  Bestiary_Vol_09.md  Bestiary_Vol_10.md  Bestiary_Vol_11.md  Bestiary_Vol_12.md  Bestiary_Vol_13.md  Bestiary_Vol_14.md  Bestiary_Vol_15.md  Bestiary_Vol_16.md  Bestiary_Vol_17.md  Bestiary_Vol_18.md  Bestiary_Vol_19.md  Bestiary_Vol_20.md  Bestiary_Vol_21.md  Bestiary_Vol_22.md  Bestiary_Vol_23.md  Bestiary_Vol_24.md  Bestiary_Vol_25.md
docs/quests/: README.md  act1_eden.md  act2_hermon.md  act3_nephilim.md  act4_enoch.md  act5_flood.md  dynamic_mounting_system.md  mount_questline.md
js/: game.js
scripts/: gather_assets.py  gen_ambient.py  gen_caves.py  gen_mobs.py  gen_pois.py  gen_prices.py  generate_caves.py  generate_locations.py  generate_mobs.py  make_app.sh
scripts/app/: AppIcon.icns  AppleSignIn.swift  Info.plist  launcher.sh
scripts/launcher/: Info.plist  Launcher.swift  make_launcher.sh
(+13 files in other folders)
