[workspace]
resolver = "2"
members = ["crates/protocol", "crates/sim", "crates/server", "crates/test-client", "crates/client-bevy"]
# client-bevy pulls in Bevy (very heavy compile), so it's excluded from the
# default `cargo build`/`cargo run` set. Build it explicitly when needed.
default-members = ["crates/protocol", "crates/sim", "crates/server", "crates/test-client"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.24"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rusqlite = { version = "0.32", features = ["bundled"] }
glam = { version = "0.29", features = ["serde"] }
anyhow = "1"
