[package]
name = "antediluvia-client-bevy"
version.workspace = true
edition.workspace = true
license.workspace = true

# Networked Bevy 2D client for the Antediluvia MMORPG. Connects to the
# authoritative server (crates/server) over WebSocket, sends input intents, and
# renders the server's world snapshots. NOT part of the default workspace build
# (Bevy is a heavy compile) — build explicitly:
#     cargo run -p antediluvia-client-bevy
[[bin]]
name = "antediluvia-client-bevy"
path = "src/main.rs"

[dependencies]
bevy = { version = "0.15", features = ["jpeg", "png"] }
antediluvia-protocol = { path = "../protocol" }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
serde_json = { workspace = true }
noise = "0.9"
