[package]
name = "antediluvia-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "antediluvia-server"
path = "src/main.rs"

[dependencies]
antediluvia-protocol = { path = "../protocol" }
antediluvia-sim = { path = "../sim" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rusqlite = { workspace = true }
glam = { workspace = true }
anyhow = { workspace = true }
