[package]
name = "antediluvia-test-client"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "antediluvia-client"
path = "src/main.rs"

[dependencies]
antediluvia-protocol = { path = "../protocol" }
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
futures-util = { workspace = true }
